// ==========================================
// ERD VIEW: TREATMENT, DRUG, AND WEATHER RISK
// Use this view when explaining treatment recommendation data.
// ==========================================

Table crop_type {
  id integer [primary key]
  crop_name varchar
}

Table disease {
  id integer [primary key]
  croptype_id integer
  disease_code varchar
  disease_name varchar
}

Table disease_weather_condition {
  id integer [primary key]
  disease_id integer [not null]
  condition_group varchar [not null]
  weather_factor varchar [not null]
  operator varchar [not null]
  min_value numeric
  max_value numeric
  recommendation_note text
  is_active boolean
}

Table treatment_plan {
  id integer [primary key]
  disease_id integer
  drug_id integer
  treatment_name varchar
  dosage_type varchar
  dosage_value_min numeric
  dosage_value_max numeric
  dosage_unit varchar
  mixing_instruction text
  spray_times smallint
  spray_interval varchar
}

Table drug {
  id integer [primary key]
  drug_name varchar
  formulation varchar
  manufacturer varchar
  is_active boolean
}

Table ingredient {
  id integer [primary key]
  ingredient_name varchar
}

Table drug_ingredient {
  id integer [primary key]
  drug_id integer [not null]
  ingredient_id integer [not null]
  concentration_value numeric
  concentration_unit varchar

  indexes {
    (drug_id, ingredient_id) [unique]
  }
}

Table drug_interaction {
  id integer [primary key]
  ingredient_a_id integer [not null]
  ingredient_b_id integer [not null]
  interaction_type varchar
  severity varchar
  warning_message text
  action_rule varchar
  interval_days integer

  indexes {
    (ingredient_a_id, ingredient_b_id) [unique]
  }
}

Ref: disease.croptype_id > crop_type.id
Ref: disease_weather_condition.disease_id > disease.id
Ref: treatment_plan.disease_id > disease.id
Ref: treatment_plan.drug_id > drug.id
Ref: drug_ingredient.drug_id > drug.id
Ref: drug_ingredient.ingredient_id > ingredient.id
Ref: drug_interaction.ingredient_a_id > ingredient.id
Ref: drug_interaction.ingredient_b_id > ingredient.id
